--- a/GuessTheWord/app/src/main/res/layout/fragment_game.xml
+++ b/GuessTheWord/app/src/main/res/layout/fragment_game.xml
@@ -14,42 +14,6 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.75" />
 
-    <Button
-        android:id="@+id/btSkip"
-        style="@style/botonBlanco"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/skip"
-        app:layout_constraintBottom_toBottomOf="@+id/btGotIt"
-        app:layout_constraintEnd_toStartOf="@+id/btGotIt"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btGotIt" />
-
-    <Button
-        android:id="@+id/btGotIt"
-        style="@style/botonVerde"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/got_it"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btEndGame"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/btSkip"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
-
-    <Button
-        android:id="@+id/btEndGame"
-        style="@style/botonBlanco"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/end_game"
-        app:layout_constraintBottom_toBottomOf="@+id/btGotIt"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/btGotIt"
-        app:layout_constraintTop_toTopOf="@+id/btGotIt" />
-
     <TextView
         android:id="@+id/tvTheWordIs"
         android:layout_width="wrap_content"
@@ -93,4 +57,42 @@
         app:layout_constraintEnd_toEndOf="@+id/tvScoreIs"
         app:layout_constraintStart_toStartOf="@+id/tvScoreIs"
         app:layout_constraintTop_toBottomOf="@+id/tvScoreIs" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/guideline2">
+
+
+        <Button
+            android:id="@+id/btSkip"
+            style="@style/botonBlanco"
+            android:layout_margin="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/skip" />
+
+        <Button
+            android:id="@+id/btGotIt"
+            style="@style/botonVerde"
+            android:layout_margin="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/got_it" />
+
+        <Button
+            android:id="@+id/btEndGame"
+            style="@style/botonBlanco"
+            android:layout_margin="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/end_game"/>
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
